Fixed link on landing page.
Font is size as per design file, but doesn’t look big enough as per jpg
of site given as example.

--- a/Homework 3/Freya Assignment/style.css
+++ b/Homework 3/Freya Assignment/style.css
@@ -80,13 +80,14 @@ header {
 .logo{
   padding:10px 0 0 60px;
   height:30%;
-  font-family: 'Open Sans', sans-serif;
 }
 
-h1{
+h1 a{
+  text-decoration:none;
   color: white;
   font-size:24px;
-  font-style: bold;
+  font-weight: 800;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .quote{
